--- a/src/app/components/pageElements/multiple-choise-element/multiple-choise-element.component.html
+++ b/src/app/components/pageElements/multiple-choise-element/multiple-choise-element.component.html
@@ -1,5 +1,5 @@
-<div class="answaresHolder">
-  <ng-container *ngFor="let answare of answares; let i = index">
+<div class="answersHolder">
+  <ng-container *ngFor="let answare of answers; let i = index">
     <div class="answareHolder" (click)='setSelected(answare)'>
       <label>{{answare.enumValue}}</label>
       <div class="iconCheckBox">
