--- a/src/app/components/pageElements/login-register-form/login-register-form.component.html
+++ b/src/app/components/pageElements/login-register-form/login-register-form.component.html
@@ -5,15 +5,15 @@
   </header>
   <form [formGroup]='loginRegisterForm'>
     <div class="form-group row">
-      <label for="staticEmail" class="col-sm-2 col-form-label">GEBRUIKERSNAAM</label>
-      <div class="col-sm-10">
+      <label for="staticEmail" class="col-sm-3 col-form-label">GEBRUIKERSNAAM</label>
+      <div class="col-sm-9">
         <input type="text" class="form-control" formControlName="username">
       </div>
     </div>
     <div class="form-group row">
-      <label for="staticEmail" class="col-sm-2 col-form-label">WACHTWOORD</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" formControlName="password">
+      <label for="staticEmail" class="col-sm-3 col-form-label">WACHTWOORD</label>
+      <div class="col-sm-9">
+        <input type="password" class="form-control" formControlName="password">
       </div>
     </div>
   </form>
