--- a/src/app/components/pages/create-feedback-session/create-feedback-session.component.scss
+++ b/src/app/components/pages/create-feedback-session/create-feedback-session.component.scss
@@ -1,58 +1,100 @@
-@import '../../../globalStylingFiles/globalClasses.scss';
-@import '../../../globalStylingFiles/globalColorVariables.scss';
+@import "../../../globalStylingFiles/globalClasses.scss";
+@import "../../../globalStylingFiles/globalColorVariables.scss";
 
-.createFeedbackSessionContainer{
+.createFeedbackSessionContainer {
+  display: flex;
+  padding: 20px;
+  height: calc(100vh - 100px);
+
+  label {
+    padding-left: 3%;
+  }
+
+  h1 {
+    text-align: center;
+    padding-bottom: 15px;
+    margin-bottom: 25px;
+    text-transform: uppercase;
+  }
+
+  .createcontainer {
+    width: 55%;
+    padding-right: 2%;
+    margin-right: 1%;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+  .previewContainer {
+    width: 45%;
+  }
+
+  .btnHolder {
     display: flex;
-    padding: 20px;
-    height: calc(100vh - 100px);
+    justify-content: space-between;
 
-    label {
-        padding-left: 3%;
+    .btn {
+      font-size: 1.2rem;
     }
+  }
 
-    h1 {
-        text-align: center;
-        padding-bottom: 15px;
-        margin-bottom: 25px;
-        text-transform: uppercase;    
-    }
+  .useExcistingBtn {
+    background: rgba(66, 65, 65, 0.733);
+    color: white;
+  }
+  .useExcistingBtn:hover {
+    color: $main-blue;
+    background: transparent;
+  }
+}
 
-    .createcontainer{
-        width: 50%;
-        padding-right: 2%;
-    }
-
-    .previewContainer {
-        width: 50%;
-    }
-
-    .btnHolder {
-        display: flex;
-        justify-content: space-between;
-
-        .btn {
-            font-size: 25px;
-        }
-    }
-
-    .useExcistingBtn {
-        background: $teal-blue;
-        color: white;
-    }
-    .useExcistingBtn:hover {
-        color: $main-blue;
-        background: transparent;
-    }
+.checkboxHolder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card {
-    text-align: center;
+  text-align: center;
 
-    p {
-        font-size: 25px;
-    }
+  p {
+    font-size: 25px;
+  }
 }
 
-.addAnsware {
-    padding: 30px 0;
+.subTitle {
+  padding: 30px 0;
+  padding-bottom: 10px;
+  p {
+    display: inline;
+    font-size: 18px;
+  }
+}
+
+.previewHolder {
+  height: calc(100vh - 224px);
+}
+
+.newAnswersPreview {
+  width: 100%;
+
+  .answersList {
+    margin: 20px;
+  }
+  .newAnswer {
+    font-weight: bold;
+    padding: 15px;
+    font-size: 1.4rem;
+    border: 1px solid #1b7c809c;
+    color: white;
+    background: cadetblue;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .newAnswersButtons {
+    display: flex;
+    justify-content: space-between;
+  }
 }
